# optitrack_publisher

./: CMakeLists.txt  README.md  package.xml
config/: README.md  calibration_matrix.yaml
launch/: optitrack_publisher.launch
notebooks/: optitrack_calibration.ipynb
src/: optitrack_publisher.py
